tests/negative/neg_pr113_constraint_type_mismatch.safe
package Neg_PR113_Constraint_Type_Mismatch
   type Packet (Active : Boolean = True, Kind : Character = 'A', Count : Integer = 0) is
      record
         Value : Integer;

   P : Packet (Active = 1, Kind = 'A', Count = 1) = (Value = 1);

